feat(heqet): helm values

--- a/charts/heqet/templates/heqet.yaml
+++ b/charts/heqet/templates/heqet.yaml
@@ -23,14 +23,20 @@ spec:
     path: {{ .path | default "." | quote }}
     repoURL: {{ .repoURL | default $.Values.heqet.defaults.repoURL | quote }}
     targetRevision: {{ .targetRevision | default "HEAD" | quote }}
-    {{- if .values }}
+    {{- if or .parameters .values }}
     helm:
+      {{- if .parameters }}
       parameters:
-    {{- range .values }}
+        {{- range .parameters }}
         - name: {{ .name | quote }}
           value: {{ .value | quote }}
+        {{- end }}
+      {{- end }}
+      {{- if .values }}
+      values:
+        {{- toYaml .values | indent 6 }}
+      {{- end }}
     {{- end }}
-  {{- end }}
   syncPolicy:
     automated:
       # FIXME: Open Issue: https://github.com/helm/helm/issues/8026
