--- a/charts/loki-stack/values.yaml
+++ b/charts/loki-stack/values.yaml
@@ -17,6 +17,8 @@ grafana:
       label: grafana_dashboard
   image:
     tag: 6.7.0
+  persistence:
+    storageClassName: standard
 
 prometheus:
   enabled: true
