--- a/charts/heqet/values.yaml
+++ b/charts/heqet/values.yaml
@@ -50,7 +50,7 @@ heqet:
                 enabled: true
                 hosts:
                   - jaeger.heqet.gnu.one
-                annotations:
+                annotations: |-
                   kubernetes.io/ingress.class: "nginx"
                   kubernetes.io/tls-acme: "true"
                   cert-manager.io/cluster-issuer: letsencrypt
