--- a/charts/heqet/templates/heqet-apps.yaml
+++ b/charts/heqet/templates/heqet-apps.yaml
@@ -31,25 +31,21 @@ spec:
         - name: {{ .name | quote }}
           value: {{ .value | quote }}
         {{- end }}
-      {{- end }}
-      {{- if .values }}
+      {{- end -}}
+
+      {{- if or .values $.Values.ingress.enabled }}
       values:
-        {{- if $.Values.tls.enabled }}
-        # Heket TLS Ingress Injector:
-        ingress:
-          enabled: true
-          hosts:
-            - {{ .name }}.{{ required "You need to set a domain or disable tls" $.Values.domain }}
-          annotations:
-            kubernetes.io/ingress.class: {{ $.Values.tls.ingress.class | default "nginx" }}
-            kubernetes.io/tls-acme: "true"
-            cert-manager.io/cluster-issuer: {{ $.Values.tls.cluster-issuer | default "letsencrypt" }}
-          tls:
-            - secretName: {{ .name }}-le-tls
-              hosts:
-                - {{ .name }}.{{ $.Values.domain }}
+        {{- if .values }}
+          {{- toYaml .values | indent 6 }}
         {{- end }}
-        {{- toYaml .values | indent 6 }}
+        {{- if and $.Values.ingress.enabled .domain }}
+          {{- $shift := empty .ingress_prefix -}}
+          {{- $indent := ternary 8 10 $shift -}}
+          {{- if .ingress_prefix }}
+{{ .ingress_prefix | indent 8 }}:
+          {{- end }}
+          {{- include "heqet.ingress" . | indent $indent -}}
+        {{- end }}
       {{- end }}
     {{- end }}
   syncPolicy:
