--- a/manifests/heqet-apps.yaml
+++ b/manifests/heqet-apps.yaml
@@ -1,10 +1,19 @@
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: heqet
+spec: {}
+status: {}
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: heqet
+  namespace: argocd
 spec:
   destination:
-    namespace: argocd
+    namespace: heqet
     server: 'https://kubernetes.default.svc'
   source:
     path: charts/heqet
